--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 
 
 <!-- Mirrored from themes.pixelstrap.com/voxo/front-end/cart by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 03 Aug 2022 14:23:14 GMT -->
@@ -1102,27 +1103,28 @@
                                 <th scope="col">total</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody
+                                th:each="el : ${products}">
                             <tr>
                                 <td>
                                     <a href="product-left-sidebar">
-                                        <img src="assets/images/fashion/product/front/1.jpg" class=" blur-up lazyload"
+                                        <img  th:src="${el.key.image}" class=" blur-up lazyload"
                                             alt="">
                                     </a>
                                 </td>
                                 <td>
-                                    <a href="product-left-sidebar">Yellow Jacket</a>
+                                    <a th:href="'/product-details-' + ${el.key.id}" th:text="${el.key.name}"></a>
                                     <div class="mobile-cart-content row">
                                         <div class="col">
                                             <div class="qty-box">
                                                 <div class="input-group">
                                                     <input type="text" name="quantity" class="form-control input-number"
-                                                        value="1">
+                                                        th:value="${el.value}">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col">
-                                            <h2>$63.00</h2>
+                                            <h2 th:text="'$' + ${el.key.price}"></h2>
                                         </div>
                                         <div class="col">
                                             <h2 class="td-color">
@@ -1134,13 +1136,13 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <h2>$63.00</h2>
+                                    <h2 th:text="'$' + ${el.key.price}"></h2>
                                 </td>
                                 <td>
                                     <div class="qty-box">
                                         <div class="input-group">
                                             <input type="number" name="quantity" class="form-control input-number"
-                                                value="1">
+                                                th:value="${el.value}">
                                         </div>
                                     </div>
                                 </td>
@@ -1150,110 +1152,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <h2 class="td-color">$3648.00</h2>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="product-left-sidebar">
-                                        <img src="assets/images/fashion/product/front/2.jpg" class=" blur-up lazyload"
-                                            alt="">
-                                    </a>
-                                </td>
-                                <td>
-                                    <a href="product-left-sidebar">Blue Jeans Color Jacket</a>
-                                    <div class="mobile-cart-content row">
-                                        <div class="col">
-                                            <div class="qty-box">
-                                                <div class="input-group">
-                                                    <input type="number" name="quantity"
-                                                        class="form-control input-number" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <h2>$69.00</h2>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color">
-                                                <a href="javascript:void(0)">
-                                                    <i class="fas fa-times"></i>
-                                                </a>
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h2>$69.00</h2>
-                                </td>
-                                <td>
-                                    <div class="qty-box">
-                                        <div class="input-group">
-                                            <input type="number" name="quantity" class="form-control input-number"
-                                                value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <a href="javascript:void(0)">
-                                        <i class="fas fa-times"></i>
-                                    </a>
-                                </td>
-                                <td>
-                                    <h2 class="td-color">$3219.00</h2>
-                                </td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="product-left-sidebar">
-                                        <img src="assets/images/fashion/product/front/3.jpg" class=" blur-up lazyload"
-                                            alt=""></a>
-                                </td>
-                                <td>
-                                    <a href="product-left-sidebar">Dawnbreaker Jacket</a>
-                                    <div class="mobile-cart-content row">
-                                        <div class="col">
-                                            <div class="qty-box">
-                                                <div class="input-group">
-                                                    <input type="number" name="quantity"
-                                                        class="form-control input-number" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col">
-                                            <h2>$69.00</h2>
-                                        </div>
-                                        <div class="col">
-                                            <h2 class="td-color">
-                                                <a href="javascript:void(0)">
-                                                    <i class="fas fa-times"></i>
-                                                </a>
-                                            </h2>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h2>$69.00</h2>
-                                </td>
-                                <td>
-                                    <div class="qty-box">
-                                        <div class="input-group">
-                                            <input type="number" name="quantity" class="form-control input-number"
-                                                value="1">
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <a href="javascript:void(0)">
-                                        <i class="fas fa-times"></i>
-                                    </a>
-                                </td>
-                                <td>
-                                    <h2 class="td-color">$4215.00</h2>
+                                    <h2 class="td-color" th:text="'$' + ${el.key.totalPrice}"></h2>
                                 </td>
                             </tr>
                         </tbody>
